--- a/assets/src/sass/objects/_header.scss
+++ b/assets/src/sass/objects/_header.scss
@@ -14,6 +14,10 @@ $header-bp-mw: 1049px;
 		padding-bottom: 10px;
 	}
 
+	.home.has-blocks & {
+		padding: 0 !important;
+	}
+
 	a {
 		transition: 0.3s all;
 	}
